# mrhnetserver

./: .gitignore  AUTHORS.txt  CMakeLists.txt  README.md  README.txt  TODO.txt  VERSION.txt
config/: mrhnetserver.conf
sql/: build_db.sql
src/: ActorType.h  CLI.cpp  CLI.h  Configuration.cpp  Configuration.h  Exception.h  Logger.cpp  Logger.h  Main.cpp  ServerAuth.cpp  ServerAuth.h  ServerException.h  SharedList.h  Timer.cpp  Timer.h
src/Communication/: CommunicationMain.cpp  CommunicationMain.h  CommunicationTask.cpp  CommunicationTask.h  ExchangeContainer.cpp  ExchangeContainer.h  MessageExchange.h  ServerInfo.h
src/Connection/: ConnectionMain.cpp  ConnectionMain.h  ConnectionTask.cpp  ConnectionTask.h
src/Database/: Database.cpp  Database.h  DatabaseTable.h
src/Job/: Job.h  JobList.cpp  JobList.h  ThreadPool.cpp  ThreadPool.h  ThreadShared.h
src/NetMessage/: MsQuic.cpp  MsQuic.h  NetConnection.cpp  NetConnection.h  NetException.h  NetMessage.cpp  NetMessage.h  NetServer.cpp  NetServer.h
src/NetMessage/Ver/: NetMessageV1.cpp  NetMessageV1.h
src/Server/: Client.cpp  Client.h  ClientPool.cpp  ClientPool.h  Server.cpp  Server.h
src/Server/Client/: Base64.cpp  Base64.h  ClientAuthentication.cpp  ClientAuthentication.h  ClientCommunication.cpp  ClientCommunication.h  ClientData.cpp  ClientData.h  UserInfo.h
src/Server/MsQuic/: ClientConnections.h  ConnectionContext.h  ListenerContext.h  MsQuic.cpp  MsQuic.h  StreamContext.h  StreamData.h  StreamRecieveContext.h  StreamSendContext.h
src/WorkerPool/: WorkerPool.cpp  WorkerPool.h  WorkerShared.h  WorkerTask.h
xcode/mrhnetserver/mrhnetserver.xcodeproj/: project.pbxproj
xcode/mrhnetserver/mrhnetserver.xcodeproj/project.xcworkspace/xcuserdata/Jens.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/mrhnetserver/mrhnetserver.xcodeproj/xcuserdata/Jens.xcuserdatad/xcschemes/: xcschememanagement.plist
